objects/ASI_CRM_VN_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ASI_CRM_VN_Expired_Contract_Valid_Month__c</fullName>
        <label>Expired Contract Valid Month</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Min_Contract_AchieveTarget__c</fullName>
        <label>Min Contract Achieve Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Promotion_Plan_Final_Approver__c</fullName>
        <label>Promotion Plan Final Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Visitation_Plan_Factor__c</fullName>
        <label>ASI CRM VN Visitation Plan Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Visitation_Plan_Target__c</fullName>
        <label>Visitation Plan Target Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI CRM VN Settings</label>
</CustomObject>